# backend

./: .gitignore  .gitmodules  Cargo.toml  bad_words.txt  build.rs  commands.txt  deploy.sh  docker-compose.yaml  envoy.yaml  fluent-bit_dc.conf  proto.pb  word2subwords.py
docker-compose/: api.env  db.bson  docker-compose.yaml  envoy.yaml  fluent-bit.conf  fluentbit.env  init-mongo.sh  keydb_master.conf  mongodb.env  sds.yaml
docker-compose/certbot/: Dockerfile  cert.sh
docker-compose/mongodata/data/db/: WiredTiger.turtle  WiredTiger.wt  WiredTigerHS.wt  _mdb_catalog.wt  collection-0-4799506758592310708.wt  (+56 more)
proto/: common_types.proto  conversation.proto  feed.proto  login.proto  notifications.proto  qa.proto  replies.proto  search.proto  settings.proto  user.proto  visibility.proto
protos/: api.pb  api.proto  api_kreya.proto  common_types.proto  conversation.proto  feed.proto  login.proto  notifications.proto  qa.proto  replies.proto  report.proto  search.proto  settings.proto  user.proto  visibility.proto
src/: cache_init.rs  main.rs  service.rs
test/: conversations_test.json
test_kreya/: test.krproj
test_kreya/v1/: directory.krpref
test_kreya/v1/Api/: BlockUser.krop  BuyEmergency-request.json  BuyEmergency.krop  DeclineInvitation-request.json  DeclineInvitation.krop  DeleteConv-request.json  DeleteConv.krop  DeleteReply-request.json  DeleteReply.krop  DownvoteConv.krop  DownvoteReply.krop  EditQASpace-request.json  EditQASpace.krop  EmergencyFeed.krop  EmergencyMetadata-request.json  EmergencyMetadata.krop  Feed-request.json  Feed.krop  GetBalance-request.json  GetBalance.krop  GetConv-request.json  GetConv.krop  GetCustomerId.krop  GetNotifications-request.json  GetNotifications.krop  GetQASpace-request.json  GetQASpace.krop  GetReplies-request.json  GetReplies.krop  GetSession-request.json  GetSession.krop  GetVisibility-request.json  GetVisibility.krop  ListInvitations-request.json  ListInvitations.krop  ListUserConvVotes-request.json  ListUserConvVotes.krop  ListUserConvs-request.json  ListUserConvs.krop  ListUserDownvotes.krop  (+46 more)
