[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "*"
prost = "*"
prost-types = "*"
tokio = { version = "*", features = ["macros"] }
tonic_include_protos = "*"

[build-dependencies]
tonic-build = "*"