[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0"
prost = "0"
#argon2 = "0"
sha2 = "0"
base85 = "1"
z85 = "3"
tonic-reflection = "0"
prost-types = "0"
anyhow="1"
#openidconnect = "2"
#rusoto_core = "0"
#rusoto_dynamodb = "0"
aws-sdk-dynamodb = "0"
aws-config = "0"
#dynomite = "0"
chrono="0"
tokio = { version = "1", features = ["full"] }
tonic_include_protos = "0"
jsonwebtoken = "8"
futures = "0" 
reqwest = { version = "0", features = ["json"] }
serde = {version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0"

[profile.release]
codegen-units = 1
lto = "fat"