[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0"
prost = "0"
sha2 = "0"
bb8-redis = "0"
mongodb = "2"
redis = { version = "0", features = ["tokio-comp"] }
moka = { version = "0", features = ["future"] }
base85 = "1"
z85 = "3"
tonic-reflection = "0"
prost-types = "0"
anyhow="1"

aws-sdk-dynamodb = "0"
aws-sdk-s3 = "0"
aws-config = "0"

uuid = "0"

image = "0"
base64ct = "1"
rand = "0"
chrono="0"
iso639_enum = "0"
bson="2"
celes = "2"
tokio = { version = "1", features = ["full"] }
tonic_include_protos = "0"
jsonwebtoken = "8"
futures = "0" 
reqwest = { version = "0", features = ["json"] }
serde = {version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0"

[profile.release]
codegen-units = 1
#lto = "fat"
lto="no"